kube/services-stage-1/go-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: go-service
  name: go-service
spec:
  ports:
  - name: grpc-81
    port: 81
    targetPort: 8080
    appProtocol: grpc
  selector:
    app: go-service
