kube/services-stage-1/ingress-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: istio-ingressgateway
  annotations:
    networking.istio.io/service-type: ClusterIP
spec:
  gatewayClassName: istio
  infrastructure:
    parametersRef:
      group: ""
      kind: ConfigMap
      name: gateway-proto-config-volume
  listeners:
  - name: http
    port: 80
    protocol: HTTP
    allowedRoutes:
      namespaces:
        from: All

---

apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ingress-http-router
spec:
  parentRefs:
  - name: istio-ingressgateway
    namespace: default
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /greet-go/
    - path:
        type: PathPrefix
        value: /go_service.Greeter/
    - path:
        type: PathPrefix
        value: /grpc.reflection.v1.ServerReflection/
    backendRefs:
    - name: go-service
      port: 81
    filters:
    - type: CORS
      cors:
        allowOrigins: ["*"]
        allowMethods: ["GET", "HEAD", "POST", "OPTIONS"]
        allowHeaders:
        - Accept
        - Accept-Language
        - Content-Language
        - Range
        - Authorization
        - User-Agent
        - Content-Type
        - Content-Transfer-Encoding
        - X-Accept-Content-Transfer-Encoding
        - X-Accept-Response-Streaming
        - X-User-Agent
        - x-grpc-web
        exposeHeaders:
        - grpc-status
        - grpc-message
        - grpc-encoding
        - grpc-accept-encoding
        - grpc-timeout
  - matches:
    - path:
        type: PathPrefix
        value: /greet-dotnet/
    - path:
        type: PathPrefix
        value: /dotnet_service.Greeter/
    backendRefs:
    - name: dotnet-service
      port: 82
    filters:
    - type: CORS
      cors:
        allowOrigins: ["*"]
        allowMethods: ["GET", "HEAD", "POST", "OPTIONS"]
        allowHeaders:
        - Accept
        - Accept-Language
        - Content-Language
        - Range
        - Authorization
        - User-Agent
        - Content-Type
        - Content-Transfer-Encoding
        - X-Accept-Content-Transfer-Encoding
        - X-Accept-Response-Streaming
        - X-User-Agent
        - x-grpc-web
        exposeHeaders:
        - grpc-status
        - grpc-message
        - grpc-encoding
        - grpc-accept-encoding
        - grpc-timeout
